# main-website

./: .gitignore  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
http-server/: CMakeLists.txt  Makefile  README.md  requestHTTP.cpp  responseHTTP.cpp  securityModel.cpp  securityModelSimple.cpp  server.cpp  serverModelHTTP.cpp  serverModelSimple.cpp  utils.cpp
http-server/inc/: requestHTTP.h  responseHTTP.h  securityModel.h  securityModelSimple.h  server.h  serverModel.h  serverModelHTTP.h  serverModelSimple.h  utils.h
http-server/utils/: utils.cpp  utils.hpp
